kubernetes/mini/core/cert-manager/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    goldilocks.fairwinds.com/enabled: 'true'
annotations:
  kustomize.toolkit.fluxcd.io/prune: disabled
