kubernetes/mini/core/cert-manager/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: cert-manager
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
